log
Sun May 15 00:01:04 HSP 2022: 
 tests:  0|5
total_score: 0/70
5f76276
Sun May 15 00:04:00 HSP 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|5
total_score: 5/70
b1153e0
Sun May 15 00:09:07 HSP 2022: 
 sudoku.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e2b8467
Sun May 15 00:09:31 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4c0c600
Sun May 15 00:11:37 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4d0c13a
Sun May 15 00:12:23 HSP 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'get_adj_nodes':
sudoku.c:60:25: error: 'aux' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         if (aux->sudo[i][j] == 0)
             ~~~~~~~~~~~~^~~
cc1.exe: all warnings being treated as errors
Compilation failed
38fad67
